<resources>
    <string name="app_name">Login</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="Terms">By continuing you agree to the Amazon\'s </string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="Account">Already have an account? Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="phone_number_or_email">Phone number or Email</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_here_sign_up">New Here? Sign Up</string>

</resources>