<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity2">

    <ImageView
        android:layout_width="232dp"
        android:layout_height="232dp"
        android:id="@+id/image"
        android:src="@drawable/my_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget"
        android:textSize="14sp"
        android:text="@string/forget_password"
        android:textColor="#1983FF"
        android:fontFamily="@font/mulish"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="313dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/phonenumber"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number_or_email"
        android:background="@drawable/rounded_edittext_background"
        app:layout_constraintTop_toBottomOf="@id/forget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/mulish"
        android:id="@+id/pass"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/phonenumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:boxCollapsedPaddingTop="0dp">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_edittext_background"
        android:inputType="textPassword"
        android:padding="0dp"
        android:textSize="14sp"
        android:hint="@string/password"
        android:ems="15"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/btn1"
        android:text="@string/sign_in"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="16sp"
        android:fontFamily="@font/mulish"
        android:backgroundTint="#1983FF"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:id="@+id/or"
        android:text="@string/or"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/google"
        android:fontFamily="@font/mulish"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in_with_google"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F5F7FA"
        app:icon="@drawable/google1"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or"
        />
    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:id="@+id/google"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/or"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:backgroundTint="#F5F7FA"-->
    <!--        android:gravity="center"-->
    <!--        tools:ignore="ExtraText">-->

    <!--        <ImageView-->
    <!--            android:id="@+id/google_icon"-->
    <!--            android:layout_width="24dp"-->
    <!--            android:layout_height="24dp"-->
    <!--            android:src="@drawable/google1"  &lt;!&ndash; Use your vector drawable here &ndash;&gt;-->
    <!--        android:contentDescription="Google Sign In" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/google_text"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/sign_in_with_google"-->
    <!--            android:textColor="@color/black"-->
    <!--            android:layout_marginStart="8dp"-->
    <!--            android:layout_gravity="center_vertical" />-->
    <!--    </LinearLayout>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms"
        android:id="@+id/term"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:ignore="NotSibling" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conditions"
        android:fontFamily="@font/mulish"
        android:textSize="14sp"
        android:text="@string/terms_and_conditions"
        android:textColor="#1983FF"
        app:layout_constraintTop_toBottomOf="@id/term"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_text"
        android:text="@string/new_here_sign_up"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>