<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view1"
        android:textColor="#08080B"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/mulish"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        android:text="@string/create_your_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:hint="@string/full_name"
        android:inputType="text"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />
    <EditText

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/email"
        android:textSize="14sp"
        android:hint="@string/Email"
        android:fontFamily="@font/mulish"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        />

<!--    <EditText-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:id="@+id/password"-->
<!--        android:hint="@string/password"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:inputType="textPassword"-->
<!--        android:background="@drawable/rounded_edittext_background"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/email"-->
<!--        />-->

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:id="@+id/c_password"-->
<!--        android:hint="Confirm Password"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:background="@drawable/rounded_edittext_background"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/password"-->
<!--        />-->
    <!-- Password Field with Show/Hide Toggle -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:fontFamily="@font/mulish"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Field with Show/Hide Toggle -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c_password"
        app:passwordToggleEnabled="true"
        android:fontFamily="@font/mulish"
        app:hintEnabled="false"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:background="@drawable/rounded_edittext_background"
            android:inputType="textPassword"
            android:hint="Confirm Password" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/btnsignup"
        android:fontFamily="@font/mulish"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Sign up"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1983FF"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/c_password"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms"
        android:fontFamily="@font/mulish"
        android:textSize="14sp"
        android:id="@+id/term"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnsignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conditions"
        android:text="@string/terms_and_conditions"
        android:textColor="#1983FF"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/term"
        android:fontFamily="@font/mulish"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_In"
        android:textSize="14sp"
        android:fontFamily="@font/mulish"
        android:text="@string/Account"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>